Fix alignment on the search bar and it icon

--- a/style.css
+++ b/style.css
@@ -216,6 +216,8 @@ body {
 .search {
     display: grid;
     grid-template-columns: auto 1fr;
+    gap: 10px;
+    align-items: center;
 }
 
 .user-greet {
